[gd_scene load_steps=8 format=3 uid="uid://b67i6pr10k5dl"]

[ext_resource type="Script" path="res://Scripts/login_script.gd" id="1_fbfnw"]
[ext_resource type="Texture2D" uid="uid://cqogi5x6qc4ia" path="res://Images/background.jpg" id="2_vvspc"]
[ext_resource type="Texture2D" uid="uid://cqax031e80ib0" path="res://Images/login_background.jpg" id="3_6g7l5"]
[ext_resource type="FontFile" uid="uid://cl6mqpvuhvrg6" path="res://Fonts/PirataOne-Regular.ttf" id="4_ikh4k"]
[ext_resource type="Texture2D" uid="uid://bfb113tjss363" path="res://Images/button_background.png" id="5_ckkuj"]
[ext_resource type="Texture2D" uid="uid://by5ybnwjpr0dt" path="res://Images/button_pressed_background.webp" id="6_7kf73"]
[ext_resource type="Texture2D" uid="uid://shh0b1g313wo" path="res://Images/button_disabled_background.png" id="7_mq8bo"]

[node name="LoginScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbfnw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vvspc")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -99.0
offset_right = 250.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6g7l5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 120
text = "Zombie Apocalypse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -78.0
offset_right = 250.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_vertical = 0

[node name="UsernameLabel" type="Label" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 25
text = "Username:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameLineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(302, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 25
text = "Password:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(302, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
secret = true

[node name="ShowPasswordLabel" type="Label" parent="VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 20
text = "Show"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowPasswordButton" type="CheckButton" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LoginButton" type="TextureButton" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_ckkuj")
texture_pressed = ExtResource("6_7kf73")
texture_disabled = ExtResource("7_mq8bo")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/LoginButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 25
text = "Log in"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateAccountButton" type="TextureButton" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_ckkuj")
texture_pressed = ExtResource("6_7kf73")
texture_disabled = ExtResource("7_mq8bo")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/CreateAccountButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_ikh4k")
theme_override_font_sizes/font_size = 25
text = "Create Account"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="VBoxContainer2/HBoxContainer2/ShowPasswordButton" to="." method="_on_show_password_button_toggled"]
[connection signal="pressed" from="VBoxContainer2/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
